fix gradle build